--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.eclipse</groupId>
-    <artifactId>E-Mail-Service</artifactId>
+    <artifactId>Email-Scheduler</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
